# lesterbot_v4

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml.example  gifts.db  last_coverage.json  pyproject.toml  release.ps1.example  tmp.py
app/: config.py  localisable_data.json  localizer.py  main.py
app/exts/: charsheetmanager.py  initiative.py  nsc_gen.py  polydice.py  roll_complex.py  werewolf_w20.py  xcard.py
app/interactions_unittest/: __init__.py  actions.py  fake_models.py
app/migrations/: env.py
app/migrations/versions/: 00c06de477d8_charsheetmanager_tables_created.py  3ddfd2d40d9c_id_int_to_str.py  be15f338a4e4_create_gifts_table.py  e361e2a3dacb_add_initiativetracking_table.py  eb670947deec_add_savedrolls_table.py
tests/: test_complex_dice_parser.py  test_ext_charsheet_manager.py  test_ext_complex.py  test_ext_initiative.py  test_ext_nsc_gen.py  test_ext_ww.py  test_polydice.py  test_rule_system_rolls.py
